--- a/.eslintrc
+++ b/.eslintrc
@@ -4,6 +4,9 @@
   "parserOptions": {
     "ecmaVersion": 6,
     "sourceType": "module",
+    "ecmaFeatures": {
+      "jsx": true
+    }
   },
   "env": {
     "browser": true,
