--- a/.eslintrc
+++ b/.eslintrc
@@ -11,4 +11,13 @@
   "env": {
     "browser": true,
   },
+  "rules": {
+    "comma-dangle": ["error", {
+      "arrays": "always-multiline",
+      "objects": "always-multiline",
+      "imports": "always-multiline",
+      "exports": "always-multiline",
+      "functions": "never",
+    }]
+  }
 }
