--- a/package.json
+++ b/package.json
@@ -13,7 +13,21 @@
   "author": "Teemu Pääkkönen <oamaok@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "autoprefixer": "^7.1.1",
+    "koa": "^2.0.0-alpha.8",
+    "koa-json": "^2.0.2",
+    "koa-router": "^7.1.1",
+    "mp3-duration": "^1.0.10"
+  },
+  "devDependencies": {
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb": "^15.0.1",
+    "eslint-plugin-import": "^2.3.0",
+    "eslint-plugin-jsx-a11y": "^5.0.3",
+    "eslint-plugin-react": "^7.1.0",
+    "shipit": "^1.0.2",
+    "shipit-cli": "^3.0.0",
+    "shipit-deploy": "^2.4.0",
+    "webpack-dev-server": "^2.4.5",
     "babel-core": "^6.25.0",
     "babel-eslint": "^7.2.3",
     "babel-loader": "^7.0.0",
@@ -25,10 +39,6 @@
     "extract-text-webpack-plugin": "^2.1.2",
     "html-webpack-plugin": "^2.28.0",
     "immutable": "^3.8.1",
-    "koa": "^2.0.0-alpha.8",
-    "koa-json": "^2.0.2",
-    "koa-router": "^7.1.1",
-    "mp3-duration": "^1.0.10",
     "node-sass": "^4.5.3",
     "postcss-loader": "^2.0.5",
     "prop-types": "^15.5.10",
@@ -37,17 +47,7 @@
     "sass-loader": "^6.0.5",
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.9",
-    "webpack": "^2.6.1"
-  },
-  "devDependencies": {
-    "eslint": "^3.19.0",
-    "eslint-config-airbnb": "^15.0.1",
-    "eslint-plugin-import": "^2.3.0",
-    "eslint-plugin-jsx-a11y": "^5.0.3",
-    "eslint-plugin-react": "^7.1.0",
-    "shipit": "^1.0.2",
-    "shipit-cli": "^3.0.0",
-    "shipit-deploy": "^2.4.0",
-    "webpack-dev-server": "^2.4.5"
+    "webpack": "^2.6.1",
+    "autoprefixer": "^7.1.1"
   }
 }
