--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   "author": "Teemu Pääkkönen <oamaok@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "elm": "^0.18.0",
+    "elm-hot-loader": "^0.5.4",
+    "elm-webpack-loader": "^4.3.1",
     "koa": "^2.0.0-alpha.8",
     "koa-json": "^2.0.2",
     "koa-router": "^7.1.1",
