--- a/package.json
+++ b/package.json
@@ -22,15 +22,7 @@
     "mp3-duration": "^1.0.10"
   },
   "devDependencies": {
-    "eslint": "^3.19.0",
-    "eslint-config-airbnb": "^15.0.1",
-    "eslint-plugin-import": "^2.3.0",
-    "eslint-plugin-jsx-a11y": "^5.0.3",
-    "eslint-plugin-react": "^7.1.0",
-    "shipit": "^1.0.2",
-    "shipit-cli": "^3.0.0",
-    "shipit-deploy": "^2.4.0",
-    "webpack-dev-server": "^2.4.5",
+    "autoprefixer": "^7.1.1",
     "babel-core": "^6.25.0",
     "babel-eslint": "^7.2.3",
     "babel-loader": "^7.0.0",
@@ -39,7 +31,13 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^0.28.4",
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb": "^15.0.1",
+    "eslint-plugin-import": "^2.3.0",
+    "eslint-plugin-jsx-a11y": "^5.0.3",
+    "eslint-plugin-react": "^7.1.0",
     "extract-text-webpack-plugin": "^2.1.2",
+    "html-webpack-inline-source-plugin": "0.0.9",
     "html-webpack-plugin": "^2.28.0",
     "immutable": "^3.8.1",
     "node-sass": "^4.5.3",
@@ -48,9 +46,12 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "sass-loader": "^6.0.5",
+    "shipit": "^1.0.2",
+    "shipit-cli": "^3.0.0",
+    "shipit-deploy": "^2.4.0",
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.9",
     "webpack": "^2.6.1",
-    "autoprefixer": "^7.1.1"
+    "webpack-dev-server": "^2.4.5"
   }
 }
